crates/pixi-build-python/src/snapshots/pixi_build_python__tests__input_globs_includes_extra_globs_editable.snap
---
source: crates/pixi-build-python/src/main.rs
expression: result
---
{
    "**/*.c",
    "**/*.cpp",
    "**/*.json",
    "**/*.rs",
    "**/*.sh",
    "**/*.txt",
    "**/*.yaml",
    "**/*.yml",
    "MANIFEST.in",
    "Makefile",
    "Pipfile",
    "Pipfile.lock",
    "VERSION",
    "custom/*.py",
    "docs/**/*.md",
    "docs/**/*.rst",
    "poetry.lock",
    "pyproject.toml",
    "requirements*.txt",
    "setup.cfg",
    "setup.py",
    "tests/**/*.py",
    "tox.ini",
    "version.py",
}
