crates/pixi-build-python/src/snapshots/pixi_build_python__tests__python_is_not_added_if_already_present.snap
---
source: crates/pixi-build-python/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
  noarch: python
requirements:
  build: []
  host:
    - python
    - pip
  run:
    - boltons
    - python
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
